fix(apollo,look&feel): add vertical spacing (#1133)

--- a/client/apollo/css/src/Message/MessageApollo.scss
+++ b/client/apollo/css/src/Message/MessageApollo.scss
@@ -10,6 +10,7 @@
   --message-content-font-size: 14;
   --message-title-font-size: 16;
   --message-border-radius: var(--radius-8);
+  --message-action-padding-top: 4;
 
   border: none;
 
