--- a/client/apollo/css/src/Message/MessageLF.scss
+++ b/client/apollo/css/src/Message/MessageLF.scss
@@ -5,12 +5,13 @@
   --message-theme-color: var(--color-axa);
   --message-bg-color: var(--color-white);
   --message-border-color: var(--message-theme-color);
+  --message-border-radius: var(--radius-12);
   --message-icon-color: var(--message-theme-color);
   --message-title-color: var(--message-theme-color);
-  --message-border-radius: var(--radius-12);
+  --message-title-font-size: 16;
   --message-content-color: var(--color-gray-900);
   --message-content-font-size: 16;
-  --message-title-font-size: 16;
+  --message-action-padding-top: 12;
 
   @media (width > #{breakpoints.$breakpoint-md}) {
     --message-content-font-size: 18;
